--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,7 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
-      <th colspan="3"></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
   <tbody>
@@ -16,6 +16,23 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+
+        <% if book.favorited_by?(current_user) %>
+          <td>
+            <%= link_to book_favorites_path(book), method: :delete do %>
+              ♥<%= book.favorites.count %>
+            <% end %>
+          </td>
+          <% else %>
+          <td>
+            <%= link_to book_favorites_path(book), method: :post do %>
+              ♡<%= book.favorites.count %>
+            <% end %>
+          </td>
+          <td>コメント数：<%= book.post_comments.count %></td>
+        <% end %>
+
+
       </tr>
     <% end %>
   </tbody>
