--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,12 +17,55 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-            <% if @user == current_user %>
-              <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-              <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
-            <%end%>
+          <% if @book.favorited_by?(current_user) %>
+            <td>
+              <%= link_to book_favorites_path(@book), method: :delete do %>
+                ♥<%= @book.favorites.count %>
+              <% end %>
+            </td>
+          <% else %>
+            <td>
+              <%= link_to book_favorites_path(@book), method: :post do %>
+                ♡<%= @book.favorites.count %>
+              <% end %>
+            </td>
+          <% end %>
+          <td>コメント数：<%= @book.post_comments.count %></td>
+          <% if @user == current_user %>
+            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <%end%>
         </tr>
       </table>
+
+      <table class = 'table'>
+
+          <% @book.post_comments.each do |post_comment| %>
+            <tr>
+              <td><%= link_to(post_comment.user) do %>
+                <%= image_tag post_comment.user.get_profile_image, size:"50x50" %><br>
+                <%= post_comment.user.name %>
+                <%end%>
+              </td>
+
+              <td><%= post_comment.comment %></td>
+
+              <% if post_comment.user == current_user %>
+
+                <td><%= link_to "Destroy", book_post_comment_path(post_comment.book, post_comment), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger" %></td>
+              <% end %>
+            </tr>
+          <% end %>
+
+      </table>
+
+
+      <tr>
+        <%= form_with model: [@book, @post_comment] do |f| %>
+          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+          <%= f.submit "送信する" %>
+        <% end %>
+      </tr>
     </div>
   </div>
 </div>
