--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -3,7 +3,7 @@
     <tr>
       <th>image</th>
       <th>name</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
   <tbody>
@@ -11,6 +11,18 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size:'50x50' %></td>
         <td><%= user.name %></td>
+        <td>follows:<%=user.followings.count%></td>
+        <td>followers:<%=user.followers.count%></td>
+        <td>
+          <% if user == current_user %>
+          <% else %>
+            <% if current_user.following?(user) %>
+              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info btn-sm btn-block mb-3 " %>
+            <% else %>
+              <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success btn-sm btn-block mb-3 " %>
+            <% end %>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', user %></td>
       </tr>
     <% end %>
