--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,20 +17,10 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
 
-        <% if book.favorited_by?(current_user) %>
-          <td>
-            <%= link_to book_favorites_path(book), method: :delete do %>
-              ♥<%= book.favorites.count %>
-            <% end %>
-          </td>
-          <% else %>
-          <td>
-            <%= link_to book_favorites_path(book), method: :post do %>
-              ♡<%= book.favorites.count %>
-            <% end %>
-          </td>
-          <td>コメント数：<%= book.post_comments.count %></td>
-        <% end %>
+        <td id="favorite_buttons_<%= book.id %>">
+　　    　<%= render "favorites/favorite", book: book %>
+　　    </td>
+        <td>コメント数：<%= book.post_comments.count %></td>
 
 
       </tr>
