--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,19 +17,11 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <% if @book.favorited_by?(current_user) %>
-            <td>
-              <%= link_to book_favorites_path(@book), method: :delete do %>
-                ♥<%= @book.favorites.count %>
-              <% end %>
-            </td>
-          <% else %>
-            <td>
-              <%= link_to book_favorites_path(@book), method: :post do %>
-                ♡<%= @book.favorites.count %>
-              <% end %>
-            </td>
-          <% end %>
+
+          <td id="favorite_buttons_<%= @book.id %>">
+　　      　<%= render "favorites/favorite", book: @book %>
+　　      </td>
+
           <td>コメント数：<%= @book.post_comments.count %></td>
           <% if @user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -61,10 +53,11 @@
 
 
       <tr>
-        <%= form_with model: [@book, @post_comment] do |f| %>
-          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-          <%= f.submit "送信する" %>
-        <% end %>
+        <div id="comments-area">
+          <%= render "post_comments/comment",books: @books,book_comment: @book_comment %>
+        </div>
+        
+        
       </tr>
     </div>
   </div>
